<resources>
    <string name="title_activity_main">CTOS</string>
    <string name="title_activity_gps">Position logging and sharing</string>
    <string name="title_activity_vr">VR compass</string>
    <string name="title_activity_options">Settings</string>
    <string name="title_activity_filemanager">Track files</string>

    <string name="error_permission">Please accept the permission requests</string>
    <string name="error_permission_localisation">Please allow this application to access your localisation.</string>
    <string name="error_permission_storage">Please allow this application to access your SD card.</string>
    <string name="error_availability_storage">Please check your SD card.</string>
    <string name="error_provider_disabled">Please enable the GPS localisation.</string>
    <string name="error_file_explorer">Please install a file explorer app on your phone.</string>

    <string name="textview_template">Latitude : \nLongitude : \nAccuracy : \nAltitude : \nVelocity : \nUTC Time :&#160;</string>
    <string name="textview_result">%1$s\n%2$s\n%3$s\n%4$s\n%5$s\n%6$s</string>
    <string name="textview_switch_format">Coordinates format</string>
    <string name="textview_switch_speed">Velocity unit</string>
    <string name="textview_update">Update mechanism</string>
    <string name="textview_rate_dist">Distance rate (m)</string>
    <string name="textview_rate_time">Time rate (s)</string>

    <string name="action_settings">Settings</string>

    <string name="button_open_file">Open tracks directory</string>
    <string name="button_share_position">Share position</string>
    <string name="button_log_on">Start logging</string>
    <string name="button_log_off">Stop logging</string>
    <string name="button_gps">GPS data</string>
    <string name="button_vr">VR compass</string>

    <string name="rdb_lat_lon_ddd">Deg</string>
    <string name="rdb_lat_lon_dmm">Deg-Min</string>
    <string name="rdb_lat_lon_dms">Deg-Min-Sec</string>
    <string name="rdb_speed_ms">Meter/second</string>
    <string name="rdb_speed_kmh">Kilometer/hour</string>
    <string name="rdb_speed_mph">Mile/hour</string>
    <string name="rdb_speed_nmph">Nautical mile/hour</string>
    <string name="rdb_time">Time-based</string>
    <string name="rdb_dist">Distance-based</string>

    <string name="dialog_share">Share</string>
    <string name="dialog_display">Open</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="send_file_to">Share file with &#8230;</string>
    <string name="display_file">Open file with &#8230;</string>
    <string name="delete_file_ok">File successfully deleted</string>
    <string name="delete_file_nok">Impossible to delete the file</string>

    <string name="send_to">Share position with &#8230;</string>
    <string name="gmaps_url">https://maps.google.com/?q=%1$s,%2$s</string>

    <string name="service_start">Logging service started</string>
    <string name="service_stop">Logging service stopped</string>
    <string name="logging_service">Logging GPS position &#8230;</string>
    <string name="launch_gps">GPS updated every %1$s</string>

    <string name="gpx_header">&lt;?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?&gt;\n
        &lt;gpx  xmlns=\"http://www.topografix.com/GPX/1/1\" version=\"1.1\" creator=\"CTOS\"&gt;\n\t
        &lt;trk&gt;\n\t\t&lt;trkseg&gt;</string>
    <string name="gpx_footer">\n\t\t&lt;/trkseg&gt;\n\t&lt;/trk&gt;\n&lt;/gpx&gt;</string>
    <string name="gpx_trkpt">\n\t\t\t&lt;trkpt lon=\"%1$s\" lat=\"%2$s\"&gt;\n\t\t\t\t
        &lt;ele&gt;%3$s&lt;/ele&gt;\n\t\t\t\t
        &lt;time&gt;%4$s&lt;/time&gt;\n\t\t\t\t
        &lt;speed&gt;%5$s&lt;/speed&gt;\n\t\t\t
        &lt;/trkpt&gt;</string>
    <string name="filename">CTOS_track_</string>

    <string name="gps_description">This activity enables you to read your positioning data, share it,
    and log it in a GPX file for further use.</string>
    <string name="vr_description">This activity is a Virtual Reality compass. It displays an artificial
    horizon on a video camera feed.</string>
    <string name="title_activity_file_manager">FileManager</string>
</resources>
