<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ghost.ctos.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_gps"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:text="@string/gps_description"
                    android:textAlignment="viewEnd" />

                <Button
                    android:id="@+id/button_gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_gps" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/textView_vr"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:text="@string/vr_description"
                    android:textAlignment="viewEnd" />

                <Button
                    android:id="@+id/button_vr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_vr" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
